// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/message/demo/duration.md correctly 1`] = `
<button
  class="c7n-btn c7n-btn-flat"
  type="button"
>
  <span>
    Customized display duration
  </span>
  <div
    class="c7n-ripple-wrapper"
  />
</button>
`;

exports[`renders ./components/message/demo/info.md correctly 1`] = `
<button
  class="c7n-btn c7n-btn-primary c7n-btn-flat"
  type="button"
>
  <span>
    Display normal message
  </span>
  <div
    class="c7n-ripple-wrapper"
  />
</button>
`;

exports[`renders ./components/message/demo/loading.md correctly 1`] = `
<button
  class="c7n-btn c7n-btn-flat"
  type="button"
>
  <span>
    Display a loading indicator
  </span>
  <div
    class="c7n-ripple-wrapper"
  />
</button>
`;

exports[`renders ./components/message/demo/other.md correctly 1`] = `
<div>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      Success
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      Error
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      Warning
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
</div>
`;

exports[`renders ./components/message/demo/placement.md correctly 1`] = `
<div>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      topLeft
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      top
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      topRight
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      leftTop
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      left
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      leftBottom
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      rightTop
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      right
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      rightBottom
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      bottomLeft
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      bottom
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      bottomRight
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
</div>
`;
